Master: Agregado Header e imagenes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <button> Inmuebles </button>
+            <button> Motores </button>
+            <button> Trabajo </button>
+            <button> Profesionales </button>
+            <button> Funebres </button>
+        </div>
+            <div class="contenedorLogo">
+                <div class="izquierda">
+                    <button> Menu </button>
+                    <button> Notificaciones </button>
+                </div>
+                <div class="medio">
+                    <img src="Images/Logo_de_La_Capital_de_Rosario.svg.png" width="300" height="100">
+                </div>
+                <div class="derecha">
+                    <button> Subscribirme </button>
+                    <button> Ingresar </button>
+                </div>
+            </div>
+        <div class="menu", style="background-color: blue;">
+            <button> Ultimas noticias </button>
+            <button> Ciudad </button>
+            <button> Ovacion </button>
+            <button> Economia </button>
+            <button> Region </button>
+            <button> Policiales </button>
+            <button> Escenario </button>
+            <button> Agroclave </button>
+        </div>
+    </header>
 </body>
 </html>
