Master: Agregado Titulo, imagen y pie de foto

--- a/index.html
+++ b/index.html
@@ -39,5 +39,21 @@
             <button> Agroclave </button>
         </div>
     </header>
+    <div class="titulo">
+        <h1>
+            Es rosarino, fanático de Newell's y dueño del segundo mejor restaurante de carnes del mundo 
+        </h1>
+    </div>
+    <div class="h2">
+        <h2> Pablo Rivero dijo que se evalúan entre 500 u 700 establecimientos de todo el mundo. El año pasado finalizó en el puesto 13. </h2>
+    </div>
+    <div class="cuerpo img">
+        <div class="imgCocinero">
+            <img src="Images/Imagen Principal_Cocinero.jpg">
+        </div>
+        <div class="pieDeFoto">
+            <h5> Pablo Rivero, el rosarino fanático de Newell's que está al frente de Don Julio, el segundo mejor restaurante de carnes del mundo </h5>
+        </div>
+    </div>
 </body>
 </html>
