Master: Agregado Texto e imagenes

--- a/index.html
+++ b/index.html
@@ -55,5 +55,24 @@
             <h5> Pablo Rivero, el rosarino fanático de Newell's que está al frente de Don Julio, el segundo mejor restaurante de carnes del mundo </h5>
         </div>
     </div>
+    <div class="textos">
+        <p> "Estamos muy felices. Lo que tratamos es tratar de llevar a la máxima expresión nuestra cocina". Pablo Rivero, rosarino e hincha fanático de Newell's, habla a la distancia y no oculta su emoción. Su negocio, Don Julio -ubicado en el coqueto barrio porteño de Palermo-, fue elegido como el segundo mejor restaurante de carnes del mundo. </p>
+        <p> La elección la realizó la firma británica Upper Cut Media House a través de las opiniones de editores y especialistas independientes que anualmente evalúan entre 500 y 700 restaurantes de carne de todo el mundo. </p>
+        <p> "Una catedral para los carnívoros en la fantástica Buenos Aires", así se describe al restaurante ubicado Guatemala y Gurruchaga en el portal Worldbeststeaks.com donde se publica el ranking de los 101 mejores restaurantes de carne del mundo. Don Julio es el único establecimiento latinoamericano en el top 10 </p>
+            <div>           
+                <img src="Images/parrilla-don-julio.jpg">
+            </div>
+        <p> Este miércoles, en declaraciones al programa "El primero de la mañana", de LT8, Rivero explicó que para el ranking no se elige un corte de carne en particular o un plato especial: "Se computa como establecimiento, como propuesta gastronómica. Evalúan lo significativo de cada propuesta. Lo que hacemos es tratar de llevar a la máxima expresión nuestra cocina, ser meticulosos y cuidadosos en la selección de nuestros productos. Se trata de mostrar nuestra cultura, mostrar la tradición con la evolución. No sé si eso es lo que valoran pero es lo que nosotros mostramos". </p>
+        <p> Leer mas: <a href="https://www.lacapital.com.ar/la-ciudad/un-rosarino-fue-distinguido-tener-uno-los-mejores-restaurantes-del-mundo-n2507761.html"> Un rosarino fue distinguido por tener uno de los mejores restaurantes del mundo </a></p>
+        <p> Acerca de si la parrilla se especializaba en algún corte presentado de alguna forma en especial, el hincha leproso titular de DJ destacó que "los cortes están presentados con una estética que tiene el restaurante, que también tiene que ver con el concepto del lugar. Pero no hay nada especial y llamativo. Lo especial está detrás del producto. El corte de carne tiene una selección, una trazabilidad y eso compone algo que se valora mucho. No es simplemente carne, nosotros pensamos en mostrar paisajes culinarios dentro de un plato" </p>
+        <p> Sobre su amor por los colores rojo y negro dijo que "cada vez que juega Newell's me llego a Rosario. Soy socio vitalicio y fanático, y mis hijos también. Hace muchos años que hago directo Buenos Aires-Parque Independencia. Hice la primaria en Rosario y viví muchos veranos en la casa de mi abuela, así que tengo recuerdo muy lindos". </p>
+        <p> El ranking de los mejores restaurantes de carne del mundo </p> <!-- Poner la letra en negrita -->
+        <p> El primer puesto quedó para el restaurante Hawksmoor de Londres, que despojó del trono al ganador de las ediciones 2020 y 2021, el restaurante Firedoor de Sidney, quien descendió al tercer lugar. </p>
+            <div>
+                <img src="images/parrilla-don-julio-palermo.jpg">
+            </div>
+        <p> El top 10 lo completan Keens en Nueva York -EEUU- en el puesto 4; Gibsons Italia en Chicago -EEUU en el puesto 5; Cut en Beverly Hills -EEUU- en el puesto 6; Bavette’s Steak House en Las Vegas -EEUU- en el puesto 7; Carcasse en Koksjide -Bélgica- en el puesto 8; El Capricho en Jiménez de Jamuz -España- en el puesto 9 y Nick’s & Stef’s Steak House en Los Ángeles -EEUU- en el puesto 19. </p>
+        <p> Otros restaurantes argentinos que ingresaron al ranking fueron La Cabrera (José Antonio Cabrera 5157) y La Brigada (Estados Unidos 465), en el puesto 41 y 60, respectivamente. Ambos son de Capital Federal. </p>
+    </div>
 </body>
 </html>
