Master: Cambio de nombre, agregado footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Noticia La Capital </title>
 </head>
 <body>
     <header>
@@ -74,5 +74,41 @@
         <p> El top 10 lo completan Keens en Nueva York -EEUU- en el puesto 4; Gibsons Italia en Chicago -EEUU en el puesto 5; Cut en Beverly Hills -EEUU- en el puesto 6; Bavette’s Steak House en Las Vegas -EEUU- en el puesto 7; Carcasse en Koksjide -Bélgica- en el puesto 8; El Capricho en Jiménez de Jamuz -España- en el puesto 9 y Nick’s & Stef’s Steak House en Los Ángeles -EEUU- en el puesto 19. </p>
         <p> Otros restaurantes argentinos que ingresaron al ranking fueron La Cabrera (José Antonio Cabrera 5157) y La Brigada (Estados Unidos 465), en el puesto 41 y 60, respectivamente. Ambos son de Capital Federal. </p>
     </div>
+    <div class="etiquetas"> 
+        <button> Newell </button>
+        <button> Restaurantes </button>
+        <button> Carnes </button>
+    </div>
+    <footer style="background-color: grey;">
+        <div>
+            <img src="images/Logo_de_La_Capital_de_Rosario.svg.png" width="200", height="100">
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <a href="https://www.lacapital.com.ar/"> Diario la Capital </a>
+                </li>
+                <li>
+                    <a href="https://www.unosantafe.com.ar/"> Diario Uno Santa Fe </a>
+                </li>
+                <li>
+                    <a href="https://www.unoentrerios.com.ar/"> Diario Uno Entre Rios </a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <a href="https://www.lt8.com.ar/"> La Ocho AM830 </a>
+                </li>
+                <li>
+                    <a href="http://www.laredrosario.com/"> La Red Rosario FM 98.3 </a>
+                </li>
+                <li>
+                    <a href="https://lt15concordia.com.ar/"> LT15 Concordia AM560 </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
