Master: Agregado href y cambio de div

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <div>
-            <button> Inmuebles </button>
-            <button> Motores </button>
-            <button> Trabajo </button>
-            <button> Profesionales </button>
-            <button> Funebres </button>
+        <div style="position: ;">
+            <a href="https://inmuebles.lacapital.com.ar/"> Inmuebles </a>
+            <a href="https://motores.lacapital.com.ar/motores/"> Motores </a>
+            <a href="https://www.lacapital.com.ar/secciones/trabajo.html"> Trabajo </a>
+            <a href="https://profesionales.lacapital.com.ar/"> Profesionales </a>
+            <a href="https://funebres.lacapital.com.ar/funebres/publicar/"> Funebres </a>
         </div>
             <div class="contenedorLogo">
                 <div class="izquierda">
@@ -55,7 +55,7 @@
             <h5> Pablo Rivero, el rosarino fanático de Newell's que está al frente de Don Julio, el segundo mejor restaurante de carnes del mundo </h5>
         </div>
     </div>
-    <div class="textos">
+    <section class="textos">
         <p> "Estamos muy felices. Lo que tratamos es tratar de llevar a la máxima expresión nuestra cocina". Pablo Rivero, rosarino e hincha fanático de Newell's, habla a la distancia y no oculta su emoción. Su negocio, Don Julio -ubicado en el coqueto barrio porteño de Palermo-, fue elegido como el segundo mejor restaurante de carnes del mundo. </p>
         <p> La elección la realizó la firma británica Upper Cut Media House a través de las opiniones de editores y especialistas independientes que anualmente evalúan entre 500 y 700 restaurantes de carne de todo el mundo. </p>
         <p> "Una catedral para los carnívoros en la fantástica Buenos Aires", así se describe al restaurante ubicado Guatemala y Gurruchaga en el portal Worldbeststeaks.com donde se publica el ranking de los 101 mejores restaurantes de carne del mundo. Don Julio es el único establecimiento latinoamericano en el top 10 </p>
@@ -73,7 +73,7 @@
             </div>
         <p> El top 10 lo completan Keens en Nueva York -EEUU- en el puesto 4; Gibsons Italia en Chicago -EEUU en el puesto 5; Cut en Beverly Hills -EEUU- en el puesto 6; Bavette’s Steak House en Las Vegas -EEUU- en el puesto 7; Carcasse en Koksjide -Bélgica- en el puesto 8; El Capricho en Jiménez de Jamuz -España- en el puesto 9 y Nick’s & Stef’s Steak House en Los Ángeles -EEUU- en el puesto 19. </p>
         <p> Otros restaurantes argentinos que ingresaron al ranking fueron La Cabrera (José Antonio Cabrera 5157) y La Brigada (Estados Unidos 465), en el puesto 41 y 60, respectivamente. Ambos son de Capital Federal. </p>
-    </div>
+    </section>
     <div class="etiquetas"> 
         <button> Newell </button>
         <button> Restaurantes </button>
