Master: Agregado de comentarios

--- a/index.html
+++ b/index.html
@@ -7,28 +7,31 @@
     <title> Noticia La Capital </title>
 </head>
 <body>
-    <header>
-        <div style="position: ;">
+    <header> <!-- Encabezado de la pagina -->
+        <div style="text-align: center;">
             <a href="https://inmuebles.lacapital.com.ar/"> Inmuebles </a>
             <a href="https://motores.lacapital.com.ar/motores/"> Motores </a>
             <a href="https://www.lacapital.com.ar/secciones/trabajo.html"> Trabajo </a>
             <a href="https://profesionales.lacapital.com.ar/"> Profesionales </a>
             <a href="https://funebres.lacapital.com.ar/funebres/publicar/"> Funebres </a>
         </div>
+        <!-- Contenedor con imagen del logo y botones-->
             <div class="contenedorLogo">
-                <div class="izquierda">
+                <div style="text-align: left;"> <!--class="izquierda"-->
                     <button> Menu </button>
                     <button> Notificaciones </button>
                 </div>
-                <div class="medio">
-                    <img src="Images/Logo_de_La_Capital_de_Rosario.svg.png" width="300" height="100">
+                <!-- Imagen del Logo -->
+                <div style="text-align: center;" ,class="medio">
+                    <img src="Images/Logo_de_La_Capital_de_Rosario.svg.png" width="300" height="50">
                 </div>
-                <div class="derecha">
+                <div style="text-align: right;"> <!--class="derecha"-->
                     <button> Subscribirme </button>
                     <button> Ingresar </button>
                 </div>
             </div>
-        <div class="menu", style="background-color: blue;">
+        <!-- Barra de menu-->
+        <nav style="text-align: center;"> <!-- class="navMenu"-->
             <button> Ultimas noticias </button>
             <button> Ciudad </button>
             <button> Ovacion </button>
@@ -37,8 +40,9 @@
             <button> Policiales </button>
             <button> Escenario </button>
             <button> Agroclave </button>
-        </div>
+        </nav>
     </header>
+    <!-- Cuerpo de la noticia -->
     <div class="titulo">
         <h1>
             Es rosarino, fanático de Newell's y dueño del segundo mejor restaurante de carnes del mundo 
@@ -47,6 +51,7 @@
     <div class="h2">
         <h2> Pablo Rivero dijo que se evalúan entre 500 u 700 establecimientos de todo el mundo. El año pasado finalizó en el puesto 13. </h2>
     </div>
+    <!-- Imagen con pie de foto -->
     <div class="cuerpo img">
         <div class="imgCocinero">
             <img src="Images/Imagen Principal_Cocinero.jpg">
@@ -55,6 +60,7 @@
             <h5> Pablo Rivero, el rosarino fanático de Newell's que está al frente de Don Julio, el segundo mejor restaurante de carnes del mundo </h5>
         </div>
     </div>
+    <!-- Contenido de texto e imagenes de la noticia -->
     <section class="textos">
         <p> "Estamos muy felices. Lo que tratamos es tratar de llevar a la máxima expresión nuestra cocina". Pablo Rivero, rosarino e hincha fanático de Newell's, habla a la distancia y no oculta su emoción. Su negocio, Don Julio -ubicado en el coqueto barrio porteño de Palermo-, fue elegido como el segundo mejor restaurante de carnes del mundo. </p>
         <p> La elección la realizó la firma británica Upper Cut Media House a través de las opiniones de editores y especialistas independientes que anualmente evalúan entre 500 y 700 restaurantes de carne de todo el mundo. </p>
@@ -74,11 +80,13 @@
         <p> El top 10 lo completan Keens en Nueva York -EEUU- en el puesto 4; Gibsons Italia en Chicago -EEUU en el puesto 5; Cut en Beverly Hills -EEUU- en el puesto 6; Bavette’s Steak House en Las Vegas -EEUU- en el puesto 7; Carcasse en Koksjide -Bélgica- en el puesto 8; El Capricho en Jiménez de Jamuz -España- en el puesto 9 y Nick’s & Stef’s Steak House en Los Ángeles -EEUU- en el puesto 19. </p>
         <p> Otros restaurantes argentinos que ingresaron al ranking fueron La Cabrera (José Antonio Cabrera 5157) y La Brigada (Estados Unidos 465), en el puesto 41 y 60, respectivamente. Ambos son de Capital Federal. </p>
     </section>
+    <!-- Anexo de etiquetas -->
     <div class="etiquetas"> 
         <button> Newell </button>
         <button> Restaurantes </button>
         <button> Carnes </button>
     </div>
+    <!-- Footer con links a distintos diarios -->
     <footer style="background-color: grey;">
         <div>
             <img src="images/Logo_de_La_Capital_de_Rosario.svg.png" width="200", height="100">
