Master: Agregado de href en etiquetas

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Noticia La Capital </title>
+    <title>Noticia La Capital</title>
 </head>
 <body>
     <header> <!-- Encabezado de la pagina -->
         <div style="text-align: center;">
-            <a href="https://inmuebles.lacapital.com.ar/"> Inmuebles </a>
-            <a href="https://motores.lacapital.com.ar/motores/"> Motores </a>
-            <a href="https://www.lacapital.com.ar/secciones/trabajo.html"> Trabajo </a>
-            <a href="https://profesionales.lacapital.com.ar/"> Profesionales </a>
-            <a href="https://funebres.lacapital.com.ar/funebres/publicar/"> Funebres </a>
+            <a href="https://inmuebles.lacapital.com.ar/"> INMUEBLES </a>
+            <a href="https://motores.lacapital.com.ar/motores/"> MOTORES </a>
+            <a href="https://www.lacapital.com.ar/secciones/trabajo.html"> TRABAJO </a>
+            <a href="https://profesionales.lacapital.com.ar/"> PROFESIONALES </a>
+            <a href="https://funebres.lacapital.com.ar/funebres/publicar/"> FUNEBRES </a>
         </div>
         <!-- Contenedor con imagen del logo y botones-->
             <div class="contenedorLogo">
@@ -31,15 +31,15 @@
                 </div>
             </div>
         <!-- Barra de menu-->
-        <nav style="text-align: center;"> <!-- class="navMenu"-->
-            <button> Ultimas noticias </button>
-            <button> Ciudad </button>
-            <button> Ovacion </button>
-            <button> Economia </button>
-            <button> Region </button>
-            <button> Policiales </button>
-            <button> Escenario </button>
-            <button> Agroclave </button>
+        <nav style="text-align: center;"> <!-- class="navMenu"--> 
+                <a href="https://www.lacapital.com.ar/secciones/ultimo-momento.html"> Ultimas noticias </a>
+                <a href="https://www.lacapital.com.ar/secciones/laciudad.html"> Ciudad </a>
+                <a href="https://www.lacapital.com.ar/secciones/ovacion.html"> Ovacion </a> 
+                <a href="https://www.lacapital.com.ar/secciones/economia.html"> Economia </a>
+                <a href="https://www.lacapital.com.ar/secciones/laregion.html"> Region </a> 
+                <a href="https://www.lacapital.com.ar/secciones/policiales.html"> Policiales </a> 
+                <a href="https://www.lacapital.com.ar/secciones/escenario.html"> Escenario </a> 
+                <a href="https://www.agroclave.com.ar/"> Agroclave </a> 
         </nav>
     </header>
     <!-- Cuerpo de la noticia -->
@@ -82,9 +82,15 @@
     </section>
     <!-- Anexo de etiquetas -->
     <div class="etiquetas"> 
-        <button> Newell </button>
-        <button> Restaurantes </button>
-        <button> Carnes </button>
+        <button> 
+            <a href="https://www.lacapital.com.ar/newell-a32681.html"> Newell </a>
+        </button>
+        <button>
+            <a href="https://www.lacapital.com.ar/restaurantes-a24467.html"> Restaurantes </a>
+        </button>
+        <button>
+            <a href="https://www.lacapital.com.ar/carnes-a50314.html"> Carnes </a>
+        </button>
     </div>
     <!-- Footer con links a distintos diarios -->
     <footer style="background-color: grey;">
