Master: Se eliminaron clases

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <a href="https://funebres.lacapital.com.ar/funebres/publicar/"> FUNEBRES </a>
         </div>
         <!-- Contenedor con imagen del logo y botones-->
-            <div class="contenedorLogo">
-                <div style="text-align: left;"> <!--class="izquierda"-->
+            <div>
+                <div style="text-align: left;">
                     <button> Menu </button>
                     <button> Notificaciones </button>
                 </div>
                 <!-- Imagen del Logo -->
-                <div style="text-align: center;" ,class="medio">
-                    <img src="Images/Logo_de_La_Capital_de_Rosario.svg.png" width="300" height="50">
+                <div style="text-align: center;">
+                    <img src="Images/Logo_de_La_Capital_de_Rosario.svg.png" alt="LogoLaCapital" width="300" height="50">
                 </div>
-                <div style="text-align: right;"> <!--class="derecha"-->
+                <div style="text-align: right;">
                     <button> Subscribirme </button>
                     <button> Ingresar </button>
                 </div>
             </div>
         <!-- Barra de menu-->
-        <nav style="text-align: center;"> <!-- class="navMenu"--> 
+        <nav style="text-align: center;"> 
                 <a href="https://www.lacapital.com.ar/secciones/ultimo-momento.html"> Ultimas noticias </a>
                 <a href="https://www.lacapital.com.ar/secciones/laciudad.html"> Ciudad </a>
                 <a href="https://www.lacapital.com.ar/secciones/ovacion.html"> Ovacion </a> 
@@ -43,30 +43,32 @@
         </nav>
     </header>
     <!-- Cuerpo de la noticia -->
-    <div class="titulo">
+    <div>
+        <!-- Titulo de la noticia -->
         <h1>
             Es rosarino, fanático de Newell's y dueño del segundo mejor restaurante de carnes del mundo 
         </h1>
     </div>
-    <div class="h2">
+    <div>
+        <!-- Comentario respecto a la noticia -->
         <h2> Pablo Rivero dijo que se evalúan entre 500 u 700 establecimientos de todo el mundo. El año pasado finalizó en el puesto 13. </h2>
     </div>
     <!-- Imagen con pie de foto -->
-    <div class="cuerpo img">
-        <div class="imgCocinero">
-            <img src="Images/Imagen Principal_Cocinero.jpg">
+    <div >
+        <div>
+            <img src="Images/Imagen Principal_Cocinero.jpg" alt="imagenCocinero">
         </div>
-        <div class="pieDeFoto">
+        <div>
             <h5> Pablo Rivero, el rosarino fanático de Newell's que está al frente de Don Julio, el segundo mejor restaurante de carnes del mundo </h5>
         </div>
     </div>
     <!-- Contenido de texto e imagenes de la noticia -->
-    <section class="textos">
+    <section>
         <p> "Estamos muy felices. Lo que tratamos es tratar de llevar a la máxima expresión nuestra cocina". Pablo Rivero, rosarino e hincha fanático de Newell's, habla a la distancia y no oculta su emoción. Su negocio, Don Julio -ubicado en el coqueto barrio porteño de Palermo-, fue elegido como el segundo mejor restaurante de carnes del mundo. </p>
         <p> La elección la realizó la firma británica Upper Cut Media House a través de las opiniones de editores y especialistas independientes que anualmente evalúan entre 500 y 700 restaurantes de carne de todo el mundo. </p>
         <p> "Una catedral para los carnívoros en la fantástica Buenos Aires", así se describe al restaurante ubicado Guatemala y Gurruchaga en el portal Worldbeststeaks.com donde se publica el ranking de los 101 mejores restaurantes de carne del mundo. Don Julio es el único establecimiento latinoamericano en el top 10 </p>
             <div>           
-                <img src="Images/parrilla-don-julio.jpg">
+                <img src="Images/parrilla-don-julio.jpg" alt="establecimientoPorFuera">
             </div>
         <p> Este miércoles, en declaraciones al programa "El primero de la mañana", de LT8, Rivero explicó que para el ranking no se elige un corte de carne en particular o un plato especial: "Se computa como establecimiento, como propuesta gastronómica. Evalúan lo significativo de cada propuesta. Lo que hacemos es tratar de llevar a la máxima expresión nuestra cocina, ser meticulosos y cuidadosos en la selección de nuestros productos. Se trata de mostrar nuestra cultura, mostrar la tradición con la evolución. No sé si eso es lo que valoran pero es lo que nosotros mostramos". </p>
         <p> Leer mas: <a href="https://www.lacapital.com.ar/la-ciudad/un-rosarino-fue-distinguido-tener-uno-los-mejores-restaurantes-del-mundo-n2507761.html"> Un rosarino fue distinguido por tener uno de los mejores restaurantes del mundo </a></p>
@@ -75,13 +77,13 @@
         <p> El ranking de los mejores restaurantes de carne del mundo </p> <!-- Poner la letra en negrita -->
         <p> El primer puesto quedó para el restaurante Hawksmoor de Londres, que despojó del trono al ganador de las ediciones 2020 y 2021, el restaurante Firedoor de Sidney, quien descendió al tercer lugar. </p>
             <div>
-                <img src="images/parrilla-don-julio-palermo.jpg">
+                <img src="images/parrilla-don-julio-palermo.jpg" alt="establecimientoPorDentro">
             </div>
         <p> El top 10 lo completan Keens en Nueva York -EEUU- en el puesto 4; Gibsons Italia en Chicago -EEUU en el puesto 5; Cut en Beverly Hills -EEUU- en el puesto 6; Bavette’s Steak House en Las Vegas -EEUU- en el puesto 7; Carcasse en Koksjide -Bélgica- en el puesto 8; El Capricho en Jiménez de Jamuz -España- en el puesto 9 y Nick’s & Stef’s Steak House en Los Ángeles -EEUU- en el puesto 19. </p>
         <p> Otros restaurantes argentinos que ingresaron al ranking fueron La Cabrera (José Antonio Cabrera 5157) y La Brigada (Estados Unidos 465), en el puesto 41 y 60, respectivamente. Ambos son de Capital Federal. </p>
     </section>
     <!-- Anexo de etiquetas -->
-    <div class="etiquetas"> 
+    <div> 
         <button> 
             <a href="https://www.lacapital.com.ar/newell-a32681.html"> Newell </a>
         </button>
@@ -95,7 +97,7 @@
     <!-- Footer con links a distintos diarios -->
     <footer style="background-color: grey;">
         <div>
-            <img src="images/Logo_de_La_Capital_de_Rosario.svg.png" width="200", height="100">
+            <img src="images/Logo_de_La_Capital_de_Rosario.svg.png" alt="LogoLaCapital" width="200", height="100">
         </div>
         <div>
             <ul>
